--- a/assets/styles/scss/blocks/comments/__form/__form.scss
+++ b/assets/styles/scss/blocks/comments/__form/__form.scss
@@ -6,11 +6,14 @@
     color: rgba(255, 255, 255, 0.49);
     font-size: 20px;
     padding-left: 2rem;
+
 }
 
 .form-name {
+
     height: 12vh;
     border-radius: 19px;
+    outline: none;
 }
 
 .form-comment {
@@ -19,4 +22,6 @@
     border-radius: 29px;
     margin: 3rem 0;
     padding: 3vh 0 0 4vh;
+    outline: none;
+
 }
