Добавила css статическим блокам

--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -1,12 +1,21 @@
 .comments__result-item>div {
-    width: 85vh;
+    width: 83vh;
     height: 102px;
     background-color: white;
     opacity: 0.8;
     border-radius: 27px;
     padding: 1vh;
     margin-bottom: 5px;
+}
 
+.comments__result-block {
+    width: 83vh;
+    height: 102px;
+    background-color: white;
+    opacity: 0.8;
+    border-radius: 27px;
+    padding: 1vh;
+    margin-bottom: 5px;
 }
 
 .comments__photo {
@@ -25,7 +34,6 @@
 }
 
 .comments__content {
-
     display: block;
     position: relative;
     font-size: 23px;
@@ -38,6 +46,7 @@
 .comments__time {
     display: block;
     font-size: 15px;
+    font-style: italic;
     margin: 2vh 0 0 70vh;
 }
 
@@ -77,4 +86,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+#user-avatar {
+    position: relative;
+    width: 60px;
+    top: 10px;
+    left: 5px;
 }
